--- a/manifest.html
+++ b/manifest.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mitglied werden – Königreich der Künstler*innen</title>
+    <title>Verfassung des Königreichs</title>
     <link rel="stylesheet" href="style.css">
-    <script src="form.js" defer></script>
 </head>
 <body>
     <header>
-        <h1>Werde Mitglied des Königreichs der Künstler*innen</h1>
+        <h1>Verfassung des Königreichs</h1>
         <nav>
             <a href="index.html">Startseite</a>
             <a href="join.html">Mitglied werden</a>
@@ -18,26 +17,24 @@
     </header>
     <main>
         <section>
-            <h2>Registrierungsformular</h2>
-            <form id="join-form" onsubmit="handleFormSubmit(event)">
-                <label for="username">Benutzername:</label>
-                <input type="text" id="username" name="username" required>
-
-                <label for="firstname">Vorname:</label>
-                <input type="text" id="firstname" name="firstname" required>
-
-                <label for="lastname">Nachname:</label>
-                <input type="text" id="lastname" name="lastname" required>
-
-                <label for="age">Alter:</label>
-                <input type="number" id="age" name="age" required>
-
-                <label for="email">E-Mail:</label>
-                <input type="email" id="email" name="email" required>
-
-                <button type="submit">Mitglied werden</button>
-            </form>
-            <div id="confirmation-message"></div>
+            <h2>Präambel</h2>
+            <p>Dies ist die Verfassung des Königreichs der Künstler*innen in Berlin. Hier steht die Grundlage unserer Gemeinschaft, unserer Werte und unserer Vision.</p>
+        </section>
+        <section>
+            <h2>Artikel 1: Name und Zweck</h2>
+            <p>Unser Königreich ist ein Ort der Kreativität und Zusammenarbeit. Es steht allen offen, die in Berlin künstlerisch tätig sind.</p>
+        </section>
+        <section>
+            <h2>Artikel 2: Rechte und Pflichten</h2>
+            <p>Jedes Mitglied hat das Recht auf freie künstlerische Entfaltung und die Pflicht, die Gemeinschaft zu respektieren und zu fördern.</p>
+        </section>
+        <section>
+            <h2>Artikel 3: Mitgliedschaft</h2>
+            <p>Die Mitgliedschaft steht allen offen, die das Anmeldeformular ausfüllen und die Werte des Königreichs anerkennen.</p>
+        </section>
+        <section>
+            <h2>Schlusserklärung</h2>
+            <p>Zusammen schaffen wir eine Gemeinschaft, die Kunst und Kreativität fördert und inspiriert.</p>
         </section>
     </main>
     <footer>
