--- a/join.html
+++ b/join.html
@@ -3,45 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mitglied werden – Königreich der Künstler*innen</title>
+    <title>Mitglied werden - Kingdom of Timbo</title>
     <link rel="stylesheet" href="style.css">
-    <script src="form.js" defer></script>
 </head>
 <body>
     <header>
-        <h1>Werde Mitglied des Königreichs der Künstler*innen</h1>
+        <div class="logo">
+            <img src="logo.png" alt="Kingdom of Timbo">
+            <span>Kingdom of Timbo</span>
+        </div>
         <nav>
             <a href="index.html">Startseite</a>
             <a href="join.html">Mitglied werden</a>
-            <a href="manifest.html">Verfassung</a>
+            <a href="members.html">Mitglieder</a>
+            <a href="manifest.html">Manifest</a>
         </nav>
     </header>
+
     <main>
-        <section>
-            <h2>Registrierungsformular</h2>
-            <form id="join-form" onsubmit="handleFormSubmit(event)">
-                <label for="username">Benutzername:</label>
-                <input type="text" id="username" name="username" required>
+        <h1>Mitglied werden</h1>
+        <form action="submit_form.php" method="post">
+            <!-- Name -->
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" placeholder="Dein Name" required>
 
-                <label for="firstname">Vorname:</label>
-                <input type="text" id="firstname" name="firstname" required>
+            <!-- Profession -->
+            <label for="profession">Profession:</label>
+            <input type="text" id="profession" name="profession" placeholder="Z.B. Maler*in, Musiker*in" required>
 
-                <label for="lastname">Nachname:</label>
-                <input type="text" id="lastname" name="lastname" required>
+            <!-- Institution -->
+            <label for="institution">Institution:</label>
+            <input type="text" id="institution" name="institution" placeholder="Z.B. Galerie, Kulturzentrum" required>
 
-                <label for="age">Alter:</label>
-                <input type="number" id="age" name="age" required>
+            <!-- E-Mail -->
+            <label for="email">E-Mail:</label>
+            <input type="email" id="email" name="email" placeholder="Deine E-Mail" required>
 
-                <label for="email">E-Mail:</label>
-                <input type="email" id="email" name="email" required>
+            <!-- Anonymisierungsoption -->
+            <label>
+                <input type="checkbox" name="anonymous" value="1"> Mein Name soll anonym angezeigt werden
+            </label>
 
-                <button type="submit">Mitglied werden</button>
-            </form>
-            <div id="confirmation-message"></div>
-        </section>
+            <!-- Newsletter -->
+            <label>
+                <input type="checkbox" name="newsletter" value="1"> Zum Newsletter anmelden
+            </label>
+
+            <!-- Absenden -->
+            <button type="submit">Beitreten</button>
+        </form>
     </main>
+
     <footer>
-        <p>&copy; 2024 Königreich der Künstler*innen. Alle Rechte vorbehalten.</p>
+        <p>&copy; 2024 Kingdom of Timbo | <a href="mailto:kontakt@kingdomoftimbo.de">Kontakt</a></p>
     </footer>
 </body>
 </html>
