--- a/index.html
+++ b/index.html
@@ -3,32 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Königreich der Künstler*innen – Berlin</title>
+    <title>Kingdom of Timbo</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Willkommen im Königreich der Künstler*innen</h1>
+        <div class="logo">
+            <img src="logo.png" alt="Kingdom of Timbo">
+            <span>Kingdom of Timbo</span>
+        </div>
         <nav>
             <a href="index.html">Startseite</a>
             <a href="join.html">Mitglied werden</a>
-            <a href="manifest.html">Verfassung</a>
+            <a href="members.php">Mitglieder</a>
+            <a href="manifest.html">Manifest</a>
         </nav>
     </header>
+
     <main>
-        <section>
-            <h2>Über das Königreich</h2>
-            <p>Das Königreich der Künstler*innen ist eine neue, kreative Gemeinschaft in Berlin.</p>
-            <p>Ein Ort, um Kunst zu leben, zu fördern und zu schützen – als Antwort auf die Kürzungen der Kulturförderung und die zunehmende Gentrifizierung.</p>
-        </section>
-        <section>
-            <h2>Werde Mitglied</h2>
-            <p>Schließe dich uns an und werde Teil dieser kreativen Bewegung!</p>
-            <a href="join.html">Jetzt Mitglied werden</a>
-        </section>
+        <h1>Willkommen im Kingdom of Timbo!</h1>
+        <p>Das Kingdom of Timbo ist eine neue Gemeinschaft für Künstler*innen, die gegen Gentrifizierung, Kürzungen und die Verdrängung kreativer Räume kämpft. Werde Teil unserer Bewegung!</p>
+        <p><a href="join.html" class="button">Mitglied werden</a></p>
     </main>
+
     <footer>
-        <p>&copy; 2024 Königreich der Künstler*innen. Alle Rechte vorbehalten.</p>
+        <p>&copy; 2024 Kingdom of Timbo | <a href="mailto:kontakt@kingdomoftimbo.de">Kontakt</a></p>
     </footer>
 </body>
 </html>
