--- a/join.html
+++ b/join.html
@@ -15,7 +15,7 @@
         <nav>
             <a href="index.html">Startseite</a>
             <a href="join.html">Mitglied werden</a>
-            <a href="members.html">Mitglieder</a>
+            <a href="members.php">Mitglieder</a>
             <a href="manifest.html">Manifest</a>
         </nav>
     </header>
@@ -23,33 +23,26 @@
     <main>
         <h1>Mitglied werden</h1>
         <form action="submit_form.php" method="post">
-            <!-- Name -->
             <label for="name">Name:</label>
-            <input type="text" id="name" name="name" placeholder="Dein Name" required>
+            <input type="text" id="name" name="name" required>
 
-            <!-- Profession -->
             <label for="profession">Profession:</label>
-            <input type="text" id="profession" name="profession" placeholder="Z.B. Maler*in, Musiker*in" required>
+            <input type="text" id="profession" name="profession" required>
 
-            <!-- Institution -->
             <label for="institution">Institution:</label>
-            <input type="text" id="institution" name="institution" placeholder="Z.B. Galerie, Kulturzentrum" required>
+            <input type="text" id="institution" name="institution" required>
 
-            <!-- E-Mail -->
             <label for="email">E-Mail:</label>
-            <input type="email" id="email" name="email" placeholder="Deine E-Mail" required>
+            <input type="email" id="email" name="email" required>
 
-            <!-- Anonymisierungsoption -->
             <label>
                 <input type="checkbox" name="anonymous" value="1"> Mein Name soll anonym angezeigt werden
             </label>
 
-            <!-- Newsletter -->
             <label>
                 <input type="checkbox" name="newsletter" value="1"> Zum Newsletter anmelden
             </label>
 
-            <!-- Absenden -->
             <button type="submit">Beitreten</button>
         </form>
     </main>
